packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__example_derived_signals_multiple_children.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 2917
expression: output
---
==INPUT==


import { component$, useStore, mutable } from '@builder.io/qwik';

import {dep} from './file';

export const App = component$(() => {
	const signal = useSignal(0);
	const store = useStore({});
	return (
		<>
			<div>First text</div>
			<div>First {`text`}</div>
			<div>First {1}</div>
			<div>First {true}</div>
			<div>First {`text${12}`}</div>
			<div>First {typeof `text${12}` === 'string' ? 12 : 43}</div>
			<div>First {signal}</div>
			<div>First {signal.value}</div>
			<div>First {12 + signal.value}</div>
			<div>First {store.address.city.name}</div>
			<div>First {store.address.city.name ? 'true' : 'false'}</div>
			<div>First {dep}</div>
			<div>First {dep.thing}</div>
			<div>First {dep.thing + 'stuff'}</div>
			<div>First {globalThing}</div>
			<div>First {globalThing.thing}</div>
			<div>First {globalThing.thing + 'stuff'}</div>
			<div>First {signal.value()}</div>
			<div>First {signal.value + unknown()}</div>
			<div>First {mutable(signal)}</div>
			<div>First {signal.value + dep}</div>
		</>
	);
});

============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { _jsxSorted } from "@builder.io/qwik";
import { _wrapProp } from "@builder.io/qwik";
import { _fnSignal } from "@builder.io/qwik";
import { inlinedQrl } from "@builder.io/qwik";
import { Fragment as _Fragment } from "@builder.io/qwik/jsx-runtime";
import { useStore, mutable } from '@builder.io/qwik';
import { dep } from './file';
const App_component_ckEPmXZlub0 = ()=>{
    const signal = useSignal(0);
    const store = useStore({});
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
        /*#__PURE__*/ _jsxSorted("div", null, null, "First text", 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            `text`
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            1
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            true
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            `text${12}`
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            typeof `text${12}` === 'string' ? 12 : 43
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            signal
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            _wrapProp(signal)
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            _fnSignal((p0)=>12 + p0.value, [
                signal
            ], "12+p0.value")
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            _fnSignal((p0)=>p0.address.city.name, [
                store
            ], "p0.address.city.name")
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            _fnSignal((p0)=>p0.address.city.name ? 'true' : 'false', [
                store
            ], 'p0.address.city.name?"true":"false"')
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            dep
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            dep.thing
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            dep.thing + 'stuff'
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            globalThing
        ], 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            globalThing.thing
        ], 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            globalThing.thing + 'stuff'
        ], 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            signal.value()
        ], 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            signal.value + unknown()
        ], 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            mutable(signal)
        ], 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            signal.value + dep
        ], 1, null)
    ], 1, "u6_0");
};
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(App_component_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;AACA,SAAqB,QAAQ,EAAE,OAAO,QAAQ,mBAAmB;AAEjE,SAAQ,GAAG,QAAO,SAAS;kCAEG;IAC7B,MAAM,SAAS,UAAU;IACzB,MAAM,QAAQ,SAAS,CAAC;IACxB,qBACC;sBACC,WAAC,mBAAI;sBACL,WAAC;YAAI;YAAO,CAAC,IAAI,CAAC;;sBAClB,WAAC;YAAI;YAAO;;sBACZ,WAAC;YAAI;YAAO;;sBACZ,WAAC;YAAI;YAAO,CAAC,IAAI,EAAE,GAAG,CAAC;;sBACvB,WAAC;YAAI;YAAO,OAAO,CAAC,IAAI,EAAE,GAAG,CAAC,KAAK,WAAW,KAAK;;sBACnD,WAAC;YAAI;YAAO;;sBACZ,WAAC;YAAI;sBAAO;;sBACZ,WAAC;YAAI;4BAAO,KAAK,GAAO,KAAK;;;;sBAC7B,WAAC;YAAI;4BAAO,GAAM,OAAO,CAAC,IAAI,CAAC,IAAI;;;;sBACnC,WAAC;YAAI;4BAAO,GAAM,OAAO,CAAC,IAAI,CAAC,IAAI,GAAG,SAAS;;;;sBAC/C,WAAC;YAAI;YAAO;;sBACZ,WAAC;YAAI;YAAO,IAAI,KAAK;;sBACrB,WAAC;YAAI;YAAO,IAAI,KAAK,GAAG;;sBACxB,WAAC;YAAI;YAAO;;sBACZ,WAAC;YAAI;YAAO,YAAY,KAAK;;sBAC7B,WAAC;YAAI;YAAO,YAAY,KAAK,GAAG;;sBAChC,WAAC;YAAI;YAAO,OAAO,KAAK;;sBACxB,WAAC;YAAI;YAAO,OAAO,KAAK,GAAG;;sBAC3B,WAAC;YAAI;YAAO,QAAQ;;sBACpB,WAAC;YAAI;YAAO,OAAO,KAAK,GAAG;;;AAG9B;AA5BA,OAAO,MAAM,oBAAM,+FA4BhB\"}")
== DIAGNOSTICS ==

[]
