packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__example_dev_mode.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 2299
expression: output
---
==INPUT==


import { component$, useStore } from '@builder.io/qwik';

export const App = component$(() => {
	return (
		<Cmp>
			<p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
		</Cmp>
	);
});

============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { qrlDEV } from "@builder.io/qwik";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrlDEV(()=>import("./app_component_ckepmxzlub0"), "App_component_ckEPmXZlub0", {
    file: "/user/qwik/src/test.tsx",
    lo: 90,
    hi: 202,
    displayName: "App_component"
}));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM;;;;;IAMhB\"}")
============================= app_component_ckepmxzlub0.js (ENTRY POINT)==

import { _jsxSorted } from "@builder.io/qwik";
import { qrlDEV } from "@builder.io/qwik";
export const App_component_ckEPmXZlub0 = ()=>{
    return /*#__PURE__*/ _jsxSorted(Cmp, null, null, /*#__PURE__*/ _jsxSorted("p", null, {
        class: "stuff",
        onClick$: /*#__PURE__*/ qrlDEV(()=>import("./app_component_cmp_p_onclick_vuxzfutkpto"), "App_component_Cmp_p_onClick_vuXzfUTkpto", {
            file: "/user/qwik/src/test.tsx",
            lo: 146,
            hi: 171,
            displayName: "App_component_Cmp_p_onClick"
        })
    }, "Hello Qwik", 3, null, {
        fileName: "test.tsx",
        lineNumber: 7,
        columnNumber: 4
    }), 3, "u6_0", {
        fileName: "test.tsx",
        lineNumber: 6,
        columnNumber: 3
    });
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;yCAG8B;IAC7B,qBACC,WAAC,+BACA,WAAC;QAAE,OAAM;QAAQ,QAAQ;;;;;;OAA6B;;;;;;;;;AAGzD\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "app_component_ckepmxzlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    90,
    202
  ]
}
*/
============================= app_component_cmp_p_onclick_vuxzfutkpto.js (ENTRY POINT)==

export const App_component_Cmp_p_onClick_vuXzfUTkpto = ()=>console.log('warn');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"uDAM8B,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_Cmp_p_onClick_vuXzfUTkpto",
  "entry": null,
  "displayName": "App_component_Cmp_p_onClick",
  "hash": "vuXzfUTkpto",
  "canonicalFilename": "app_component_cmp_p_onclick_vuxzfutkpto",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    146,
    171
  ]
}
*/
== DIAGNOSTICS ==

[]
