packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__example_drop_side_effects.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 821
expression: output
---
==INPUT==


import { component$ } from '@builder.io/qwik';
import { server$ } from '@builder.io/qwik-city';
import { clientSupabase } from 'supabase';
import { Client } from 'openai';
import { secret } from './secret';
import { sideEffect } from './secret';

const supabase = clientSupabase();
const dfd = new Client(secret);

(function() {
	console.log('run');
	})();
	(() => {
	console.log('run');
	})();

sideEffect();

export const api = server$(() => {
	supabase.from('ffg').do(dfd);
});

export default component$(() => {
	return (
		<button onClick$={() => await api()}></button>
	)
	});

============================= test.js ==

import { serverQrl } from "@builder.io/qwik-city";
import { _noopQrlDEV } from "@builder.io/qwik";
import { componentQrl } from "@builder.io/qwik";
import { qrlDEV } from "@builder.io/qwik";
import { sideEffect } from './secret';
(function() {
    console.log('run');
})();
(()=>{
    console.log('run');
})();
sideEffect();
export const api = serverQrl(/*#__PURE__*/ _noopQrlDEV("api_server_JonPp043gH0", {
    file: "/user/qwik/src/test.tsx",
    lo: 0,
    hi: 0,
    displayName: "api_server"
}));
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrlDEV(()=>import("./test_component_luxexe0dqrg"), "test_component_LUXeXe0DQrg", {
    file: "/user/qwik/src/test.tsx",
    lo: 510,
    hi: 582,
    displayName: "test_component"
}));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;AAMA,SAAS,UAAU,QAAQ,WAAW;AAKtC,CAAC;IACA,QAAQ,GAAG,CAAC;AACZ,CAAC;AACD,CAAC;IACD,QAAQ,GAAG,CAAC;AACZ,CAAC;AAEF;AAEA,OAAO,MAAM,MAAM;;;;;IAEhB;AAEH,6BAAe;;;;;IAIX\"}")
============================= test_component_button_onclick_dgk9xlyroka.js (ENTRY POINT)==

import { api } from "./test";
export const test_component_button_onClick_DGk9xLyRokA = ()=>await api();


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";yDA0BoB,IAAM,MAAM\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_button_onClick_DGk9xLyRokA",
  "entry": null,
  "displayName": "test_component_button_onClick",
  "hash": "DGk9xLyRokA",
  "canonicalFilename": "test_component_button_onclick_dgk9xlyroka",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    548,
    565
  ]
}
*/
============================= test_component_luxexe0dqrg.js (ENTRY POINT)==

import { _jsxSorted } from "@builder.io/qwik";
import { qrlDEV } from "@builder.io/qwik";
export const test_component_LUXeXe0DQrg = ()=>{
    return /*#__PURE__*/ _jsxSorted("button", null, {
        onClick$: /*#__PURE__*/ qrlDEV(()=>import("./test_component_button_onclick_dgk9xlyroka"), "test_component_button_onClick_DGk9xLyRokA", {
            file: "/user/qwik/src/test.tsx",
            lo: 548,
            hi: 565,
            displayName: "test_component_button_onClick"
        })
    }, null, 3, "u6_0", {
        fileName: "test.tsx",
        lineNumber: 27,
        columnNumber: 3
    });
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;0CAwB0B;IACzB,qBACC,WAAC;QAAO,QAAQ;;;;;;;;;;;AAEjB\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test_component_luxexe0dqrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    510,
    582
  ]
}
*/
== DIAGNOSTICS ==

[]
