packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__example_explicit_ext_no_transpile.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 1413
expression: output
---
==INPUT==


import { component$, $, useStyles$ } from '@builder.io/qwik';

export const App = component$((props) => {
	useStyles$('hola');
	return $(() => (
		<div></div>
	));
});

============================= test.tsx ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./app_component_ckepmxzlub0.tsx"), "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM,4GAKhB\"}")
============================= app_component_usestyles_t35nsa5uv7u.tsx ==

export const App_component_useStyles_t35nSa5UV7U = 'hola';


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"mDAIY\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_useStyles_t35nSa5UV7U",
  "entry": "entry_segments",
  "displayName": "App_component_useStyles",
  "hash": "t35nSa5UV7U",
  "canonicalFilename": "app_component_usestyles_t35nsa5uv7u",
  "path": "",
  "extension": "tsx",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    120,
    126
  ]
}
*/
============================= app_component_ckepmxzlub0.tsx ==

import { qrl } from "@builder.io/qwik";
import { useStylesQrl } from "@builder.io/qwik";
export const App_component_ckEPmXZlub0 = (props)=>{
    useStylesQrl(/*#__PURE__*/ qrl(()=>import("./app_component_usestyles_t35nsa5uv7u.tsx"), "App_component_useStyles_t35nSa5UV7U"));
    return /*#__PURE__*/ qrl(()=>import("./app_component_1_w0t0o3qmovu.tsx"), "App_component_1_w0t0o3QMovU");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;yCAG8B,CAAC;IAC9B;IACA;AAGD\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": "entry_segments",
  "displayName": "App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "app_component_ckepmxzlub0",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    95,
    167
  ]
}
*/
============================= app_component_1_w0t0o3qmovu.tsx ==

export const App_component_1_w0t0o3QMovU = ()=><div></div>;
export { _hW } from "@builder.io/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"2CAKU,KACP,MAAM\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_1_w0t0o3QMovU",
  "entry": "entry_segments",
  "displayName": "App_component_1",
  "hash": "w0t0o3QMovU",
  "canonicalFilename": "app_component_1_w0t0o3qmovu",
  "path": "",
  "extension": "tsx",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    139,
    163
  ]
}
*/
== DIAGNOSTICS ==

[]
